no global volume option

--- a/bin-debug/main.html
+++ b/bin-debug/main.html
@@ -172,8 +172,7 @@
               width:				      "100%",
               bgColor:			      "#ffffff"
             },
-            debug:  true,
-            volume: 50
+            debug:  true
         	});
         	
         </script>
