trying to get this exports to work

--- a/html-template/index.template.html
+++ b/html-template/index.template.html
@@ -172,8 +172,7 @@
               width:				      "${width}",
               bgColor:			      "${bgcolor}"
             },
-            debug:  true,
-            volume: 50
+            debug:  true
         	});
         	
         </script>
